styles: fix alignment when last field in form is not updatable

--- a/app/assets/stylesheets/bar_back/styles/main.scss
+++ b/app/assets/stylesheets/bar_back/styles/main.scss
@@ -435,10 +435,6 @@ input[type="text"], textarea {
   font-size: 0.8rem;
 }
 
-.records__input:last-of-type {
-  margin-bottom: 0;
-}
-
 .records__data {
   align-items: center;
   color: $ice;
